--- a/project/reflect/build.gradle
+++ b/project/reflect/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java-library'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/gson-2.7.jar')
 }
 
 sourceCompatibility = "1.7"
